# pgroonga

./: .clang-format  .dir-locals.el  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  Brewfile  CMakeLists.txt  COPYING  Gemfile  Makefile  README.md  Rakefile  appveyor.yml  build.sh  helper.rb  meson.build  meson_options.txt  news.md  pgrn-pgxs.mk  pgroonga--0.2.0.sql  pgroonga--0.3.0.sql  pgroonga--0.8.0--0.9.0.sql  pgroonga--0.9.0--1.0.0.sql  pgroonga--1.0.6--1.0.7.sql  pgroonga--1.1.0--1.1.1.sql  pgroonga--1.1.8--1.1.9.sql  pgroonga-check.mk  pgroonga-crash-safer.mk  pgroonga-database.mk  pgroonga-primary-maintainer.mk  pgroonga-standby-maintainer.mk  pgroonga-wal-applier.mk  pgroonga-wal-resource-manager.mk  pgroonga.c  pgroonga.control  pgroonga.h  pgroonga.mk  pgroonga.sql  pgroonga_database.control  (+5 more)
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml  release.md
.github/workflows/: lint.yml  linux.yml  macos.yml  package.yml  release.yml  setup.yml  windows.yml
cmake/lz4/: lz4Config.cmake
data/: pgroonga--1.0.6--1.0.7.sql  pgroonga--1.1.0--1.1.1.sql  pgroonga--1.1.8--1.1.9.sql  pgroonga--1.1.9--1.2.0.sql  pgroonga--1.2.0--1.2.1.sql  pgroonga--1.2.1--1.2.2.sql  pgroonga--1.2.3--2.0.0.sql  pgroonga--2.0.2--2.0.3.sql  pgroonga--2.0.3--2.0.4.sql  pgroonga--2.0.5--2.0.6.sql  pgroonga--2.0.6--2.0.7.sql  pgroonga--2.0.9--2.1.0.sql  pgroonga--2.1.6--2.1.7.sql  pgroonga--2.1.9--2.2.0.sql  pgroonga--2.2.0--2.2.1.sql  pgroonga--2.2.2--2.2.3.sql  pgroonga--2.2.5--2.2.6.sql  pgroonga--2.2.7--2.2.8.sql  pgroonga--2.2.9--2.3.0.sql  pgroonga--2.3.1--2.3.2.sql  pgroonga--2.3.2--2.3.3.sql  pgroonga--2.4.1--2.4.2.sql  pgroonga--2.4.2--2.4.3.sql  pgroonga--2.4.5--2.4.6.sql  pgroonga--2.4.7--3.0.0.sql  pgroonga--3.0.0--3.0.1.sql  pgroonga--3.0.4--3.0.5.sql  pgroonga--3.0.7--3.0.8.sql  pgroonga--3.1.5--3.1.6.sql  pgroonga--3.2.0--3.2.1.sql  pgroonga--3.2.1--3.2.0.sql  pgroonga--3.2.1--3.2.2.sql  pgroonga--3.2.4--3.2.5.sql  pgroonga--3.2.5--3.2.4.sql  pgroonga--3.2.5--4.0.0.sql  pgroonga--4.0.0--3.2.5.sql  pgroonga--4.0.4--4.0.5.sql  pgroonga--4.0.5--4.0.4.sql  pgroonga-gpdb.sql  pgroonga.sql  (+3 more)
data/travis/: setup.sh
data/travis/pkgconfig/: msgpack.pc
examples/completion/: README.md  complete.sh  create-insert.rb  setup.sh
expected/column-name/: japanese.out
expected/custom-scan/: dead.out  debug.out  multiple-indexes.out  no-index.out  unsupported-operator.out
expected/custom-scan/multiple-condition/: index-only-and.out  mix-and.out
expected/full-text-search/: vacuum.out
expected/full-text-search/varchar/: 4k-over.out
expected/function/command/: after-truncate.out  arguments.out  select.out  timestamp-with-time-zone.out  timestamp.out
expected/function/command-escape-value/: all.out
expected/function/escape/: boolean.out  (+10 more)
expected/function/escape-query/: all.out
expected/groonga/: command.out
expected/index-only-scan/: count-star-large.out  include.out  not-nullable.out  nullable.out
expected/index-scan/: kill-prior-tuple.out
expected/jsonb/: count-asterisk.out
expected/reindex/: analyze.out
expected/text/: seqscan.out
expected/vacuum/: tablespace.out.in  two-phase-commit.out
makefiles/: pgrn-pgxs.mk  pgroonga-check-sources.mk  pgroonga-crash-safer-sources.mk  pgroonga-database-sources.mk  pgroonga-headers.mk  pgroonga-primary-maintainer-sources.mk  pgroonga-sources.mk  pgroonga-standby-maintainer-sources.mk  pgroonga-wal-applier-sources.mk  pgroonga-wal-resource-manager-sources.mk
pgrn-pgxs/: meson.build
pgroonga-check/: meson.build
pgroonga-headers/: meson.build
sql/: install.sql
sql/column-name/: japanese.sql
sql/compatibility/: vacuum.sql
sql/custom-scan/: dead.sql  debug.sql  multiple-indexes.sql  no-index.sql  unsupported-operator.sql
sql/full-text-search/: vacuum.sql
sql/groonga/: command.sql
sql/index-only-scan/: count-star-large.sql  include.sql  not-nullable.sql  nullable.sql
sql/index-scan/: kill-prior-tuple.sql
sql/jsonb/: count-asterisk.sql
sql/reindex/: analyze.sql
sql/text/: bitmapscan.sql  seqscan.sql
sql/vacuum/: tablespace.sql.in  two-phase-commit.sql
src/: pgrn-alias.c  pgrn-alias.h  pgrn-auto-close.c  pgrn-auto-close.h  pgrn-check.h  pgrn-column-name.c  pgrn-column-name.h  pgrn-command-escape-value.c  pgrn-compatible.h  pgrn-condition.c  pgrn-condition.h  pgrn-constant.h  pgrn-convert.c  pgrn-convert.h  pgrn-crash-safer-statuses.h  pgrn-create.c  pgrn-create.h  pgrn-ctid.c  pgrn-ctid.h  pgrn-custom-scan.c  pgrn-custom-scan.h  pgrn-customscan.h  pgrn-database-info.h  pgrn-database.h  pgrn-escape.c  pgrn-explain-match.c  pgrn-explain-match.h  pgrn-file.h  pgrn-flush.c  pgrn-full-text-search-condition.c  pgrn-full-text-search-condition.h  pgrn-global.c  pgrn-global.h  pgrn-groonga-tuple-is-alive.c  pgrn-groonga.c  pgrn-groonga.h  pgrn-highlight-html.c  pgrn-highlight-html.h  pgrn-index-column-name.c  pgrn-index-status.c  (+115 more)
test/: prepare.rb  run-sql-test.sh  run-test.rb  short-pgappname  short-pgappname.bat  test-pgroonga-check.rb  test-pgroonga-crash-safer.rb  test-pgroonga-database.rb  test-pgroonga-parameter.rb  test-pgroonga-primary-maintainer.rb  test-pgroonga-wal-resource-manager.rb  test-query-expand.rb  test-reindex.rb  test-sequential-scan.rb  test-streaming-replication.rb  test-tools-service-file-generator.rb  test-vacuum.rb
test/helpers/: fixture.rb  sandbox.rb
tools/: create-release-announce-template-for-blog.sh  create-release-announce-template-for-twitter.sh  download-rpm.sh  dump-wal.rb  generate-metadata-for-modifyrepo.sh  pgroonga-primary-maintainer.sh  prepare-rhel.sh  repair-dump.rb  setup-debian12.sh  setup-devenv.sh  setup-ubuntu22.sh  update-pgroonga-upgrade-page.sh
tools/systemd/: generate-pgroonga-primary-maintainer-service  generate-pgroonga-primary-maintainer-service.sh  generate-pgroonga-primary-maintainer-timer  generate-pgroonga-primary-maintainer-timer.sh  pgroonga-generate-primary-maintainer-service.sh  pgroonga-generate-primary-maintainer-timer.sh
travis/: Dockerfile.centos-7
(+3890 files in other folders)
